--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "elves",
-  "version": "0.0.6",
+  "version": "0.0.7",
   "description": "avalon.oniui test tool",
   "main": "index.js",
   "bin": "bin/elves",
@@ -18,17 +18,18 @@
   "author": "ilife5",
   "license": "MIT",
   "dependencies": {
-    "commander": "^2.6.0",
-    "mocha": "*",
-    "chai": "*",
-    "sinon": "*",
-    "send": "*",
     "access-log": "^0.3.9",
+    "chai": "*",
+    "chai-jquery": "^2.0.0",
+    "chalk": "^0.5.1",
+    "commander": "^2.6.0",
+    "glob": "^4.3.5",
     "longjohn": "^0.2.4",
+    "mocha": "*",
+    "phantom": "^0.7.1",
     "phantomjs": "^1.9.13",
     "promise": "^6.0.1",
-    "phantom": "^0.7.1",
-    "chalk": "^0.5.1",
-    "chai-jquery": "^2.0.0"
+    "send": "*",
+    "sinon": "*"
   }
 }
